rc file cleanup

--- a/rc/jicerc.ru.in
+++ b/rc/jicerc.ru.in
@@ -160,12 +160,16 @@
 
  -square	Режим прямоугольных блоков
 
- -bg_text color	Установить цвет фона для текста, подсказки, меню, запросов и сообщений.
- -bg_help color	Установить цвет фона для подсказки.
- -bg_menu color	Установить цвет фона для меню.
+ -bg_text color	
+		Установить цвет фона для текста, подсказки, меню, запросов и сообщений.
+ -bg_help color	
+		Установить цвет фона для подсказки.
+ -bg_menu color	
+		Установить цвет фона для меню.
  -bg_prompt color
 		Установить цвет фона для подсказок.
- -bg_msg color	Установить цвет фона для сообщений.
+ -bg_msg color	
+		Установить цвет фона для сообщений.
 
 		Например: -bg_text bg_blue
 
@@ -226,9 +230,11 @@
 
  Вы можете установить следующие опции:
 
-	-имя_кодировки		Установить кодировку файла (например: utf-8, iso-8859-15)
+	-имя_кодировки
+				Установить кодировку файла (например: utf-8, iso-8859-15)
 
-	-syntax name		Определить синтаксис (будет загружен файл
+	-syntax name
+				Определить синтаксис (будет загружен файл
 				синтаксиса 'name.jsf')
 
 	-hex			Режим 16ричного редактирования
@@ -288,16 +294,22 @@
 
 	-rdonly			Файл можно только читать
 
-	-keymap name		Раскладка клавиатуры, если не 'main'
+	-keymap name
+				Раскладка клавиатуры, если не 'main'
 
 	-lmsg			Определение строки состояния - более подробно
 	-rmsg			см. предыдущую секцию.
 
-	-mfirst macro		Макро, выполняемое при первой модификации файла
-	-mnew macro		Макро, выполняемое при загрузке нового файла
-	-mold macro		Макро, выполняемое при загрузке существующего файла
-	-msnew macro		Макро, выполняемое при сохранении нового файла
-	-msold macro		Макро, выполняемое при сохранении существующего файла
+	-mfirst macro
+				Макро, выполняемое при первой модификации файла
+	-mnew macro
+				Макро, выполняемое при загрузке нового файла
+	-mold macro
+				Макро, выполняемое при загрузке существующего файла
+	-msnew macro
+				Макро, выполняемое при сохранении нового файла
+	-msold macro
+				Макро, выполняемое при сохранении существующего файла
 
         Макросы, используемые в приведенных выше опциях, описываются
         так же, как и раскладки клавиатуры в последующем разделе, 
@@ -1156,8 +1168,6 @@ if,"char==65",then,"it's an A",else,"it's not an a",endif	^[ q
 @SPELL@word	^[ n
 
  Compile
-
- :def compile switch,"*Build-Log*",rtn,markb,eof," ",markk,blkdel,filt,query,parserr
 
 :def compile querysave,query,scratch,"* Build Log *",rtn,bof,markb,eof," ",markk,blkdel,build
 
