--- a/rc/jmacsrc.in
+++ b/rc/jmacsrc.in
@@ -131,12 +131,18 @@
 
  -square	Rectangular block mode
 
- -text_color color	Set color for text.
- -status_color color	Set color for status bar.
- -help_color color	Set color for help.
- -menu_color color	Set color for menus.
- -prompt_color color	Set color for prompts.
- -msg_color color	Set color for messages.
+ -text_color color
+		Set color for text.
+ -status_color color
+		Set color for status bar.
+ -help_color color
+		Set color for help.
+ -menu_color color
+		Set color for menus.
+ -prompt_color color
+		Set color for prompts.
+ -msg_color color
+		Set color for messages.
 
 		For example: -text_color bg_blue+white
 		Sets the background color to blue and foreground color to white.
@@ -197,9 +203,11 @@
 	-cpara >#!;*/%
 				Characters which can indent paragraphs.
 
-	-encoding name		Set file coding (for example: utf-8, iso-8859-15)
+	-encoding name
+				Set file coding (for example: utf-8, iso-8859-15)
 
-	-syntax name		Specify syntax (syntax file called
+	-syntax name
+				Specify syntax (syntax file called
 				'name.jsf' will be loaded)
 
 	-hex			Hex editor mode
@@ -254,16 +262,22 @@
 
 	-rdonly			File is read-only
 
-	-keymap name		Keymap to use if not 'main'
+	-keymap name
+				Keymap to use if not 'main'
 
 	-lmsg			Status line definition strings-
 	-rmsg			see previous section for more info.
 
-	-mnew macro		Macro to execute when new files are loaded
-	-mold macro		Macro to execute when existing files are loaded
-	-msnew macro		Macro to execute when new files are saved
-	-msold macro		Macro to execute when existing files are saved
-	-mfirst macro		Macro to execute on first modification
+	-mnew macro
+				Macro to execute when new files are loaded
+	-mold macro
+				Macro to execute when existing files are loaded
+	-msnew macro
+				Macro to execute when new files are saved
+	-msold macro
+				Macro to execute when existing files are saved
+	-mfirst macro
+				Macro to execute on first modification
 
 	Macros for the above options are in the same format as in the key
 	binding section below- but without the key name strings.
