--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -2,7 +2,7 @@ SUBDIRS = ru
 
 man_MANS = joe.1
 
-EXTRA_DIST = $(man_MANS)
+EXTRA_DIST = joe.1.in
 
 joe.1 : joe.1.in
 	sed 's,@JOERC\@,$(DESTDIR)$(sysconf_joedir),; s,@SPELL\@,@SPELL@,; s,@BINDIR\@,$(DESTDIR)$(bindir),' $< > $@
