--- a/rc/joerc.in
+++ b/rc/joerc.in
@@ -473,8 +473,8 @@
 \i   Help Screen    \|turn off with ^KH    prev. screen ^[,                        \i
 \i \i Send bug reports to: http://sourceforge.net/projects/joe-editor \|\i \i
 \i \i \|\i \i
-\i \i  default joerc file is here /home/Joe/etc/joe/joerc \|\i \i
-\i \i  additional documentation can be found here /home/Joe/etc/joe/doc \|\i \i
+\i \i  default jmacsrc file is here @JOERC@/jmacsrc \|\i \i
+\i \i  additional documentation can be found here @JOERC@/doc \|\i \i
 }
 
  FOURTH SECTION: Key bindings:
