--- a/rc/joerc.in
+++ b/rc/joerc.in
@@ -473,7 +473,7 @@
 \i   Help Screen    \|turn off with ^KH    prev. screen ^[,                        \i
 \i \i Send bug reports to: http://sourceforge.net/projects/joe-editor \|\i \i
 \i \i \|\i \i
-\i \i  default jmacsrc file is here @JOERC@/jmacsrc \|\i \i
+\i \i  default joerc file is here @JOERC@/joerc \|\i \i
 \i \i  additional documentation can be found here @JOERC@/doc \|\i \i
 }
 
