--- a/rc/joerc.in
+++ b/rc/joerc.in
@@ -620,7 +620,7 @@ aspellword	^[ n
 
  Grep
 
-:def grep_find mwind!,mfit!,scratch,"*Grep-Log*",rtn,bof,markb,eof," ",markk,blkdel,grep
+:def grep_find mwind!,mfit!,scratch,"* Grep Log *",rtn,bof,markb,eof," ",markk,blkdel,grep
 
  Man page
 
