--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -1,3 +1,5 @@
+sysconf_joedir = $(sysconfdir)/joe
+
 SUBDIRS = ru
 
 man_MANS = joe.1
@@ -5,7 +7,7 @@ man_MANS = joe.1
 EXTRA_DIST = joe.1.in
 
 joe.1 : joe.1.in
-	sed 's,@JOERC\@,$(DESTDIR)$(sysconf_joedir),; s,@SPELL\@,@SPELL@,; s,@BINDIR\@,$(DESTDIR)$(bindir),' $< > $@
+	sed 's,@JOERC\@,$(sysconf_joedir),; s,@SPELL\@,@SPELL@,; s,@BINDIR\@,$(bindir),' $< > $@
 
 MOSTLYCLEANFILES = $(man_MANS)
 
