--- a/man/ru/Makefile.am
+++ b/man/ru/Makefile.am
@@ -1,3 +1,4 @@
+sysconf_joedir = $(sysconfdir)/joe
 man_MANS = joe.1
 
 mandir = @mandir@/ru
@@ -5,6 +6,6 @@ mandir = @mandir@/ru
 EXTRA_DIST = joe.1.in
 
 joe.1 : joe.1.in
-	sed 's,@JOERC\@,$(DESTDIR)$(sysconf_joedir),; s,@SPELL\@,@SPELL@,; s,@BINDIR\@,$(DESTDIR)$(bindir),' $< > $@
+	sed 's,@JOERC\@,$(sysconf_joedir),; s,@SPELL\@,@SPELL@,; s,@BINDIR\@,$(bindir),' $< > $@
 
 MOSTLYCLEANFILES = $(man_MANS)
